SystemRescue ChangeLog
======================

-------------------------------------------------------------------------------
9.01 (YYYY-MM-DD):
-------------------------------------------------------------------------------
* Support for adding Certification Authorities (CAs) via YAML config (Gerd v. Egidy)

-------------------------------------------------------------------------------
9.00 (2022-01-16):
-------------------------------------------------------------------------------
* Updated the kernel to the Long-Term-Supported linux-5.15.14
* The new kernel brings the ntfs3 module which provides better NTFS support
* The system comes with a copy of the website as an offline manual (Gerd v. Egidy)
* Added sysrescue-customize script to create custom ISO images (Gerd v. Egidy)
* Initial support for configuring the system with YAML files (#170)
* Support for configuring autorun with the new YAML configuration files
* Replaced the mesa package with a minimal alternative to save 52MB (#241)
* Converted the bash system initialisation script to python (#170)
* Removed XOrg driver "xf86-video-qxl" as it is currently not stable (#235)
* Bring back accidently removed package inetutils (telnet, ftp, hostname,...)
* Added packages: aq, libisoburn, patch, python-llfuse, python-yaml, rdiff-backup

-------------------------------------------------------------------------------
8.07 (2021-12-19):
-------------------------------------------------------------------------------
* Updated kernel to the Long-Term-Supported linux-5.10.87
* Pacman uses snapshot repository to ease installation of packages (Gerd v. Egidy)
* Boot with "iomem=relaxed" by default as flashrom requires it (Gerd v. Egidy)
* Added packages: net-tools, cronie, at, archinstall, wqy-microhei

-------------------------------------------------------------------------------
8.06 (2021-11-20):
-------------------------------------------------------------------------------